2000-05-27  Ion Badulescu  <ib42@chestnut.mcl.cs.columbia.edu>

	* libamu/xutil.c (amu_release_controlling_tty): removed an unused
	variable from the previous patch

2000-05-26  Ion Badulescu  <ionut@moisil.cs.columbia.edu>

	* aux/macros/check_autofs_style.m4: fixed substitution for default
	case

	* libamu/xutil.c (amu_release_controlling_tty): close standard
	file descriptors, re-open them as /dev/null

	* include/am_defs.h: don't try to include both <ndbm.h> and
	<db1/ndbm.h>, it really doesn't work

2000-05-16  Ion Badulescu  <ib42@earth.cs.columbia.edu>

	* hlfsd/stubs.c (nfsproc_lookup_2_svc): added code to update mtime
	on lookup if MNT2_NFS_OPT_SYMTTL is not defined (copied from
	getattr). This fixes the problem introduced by the Linux nfsv3
	patches.

2000-05-12  Ion Badulescu  <ionut@moisil.cs.columbia.edu>

	* Makefile.am (EXTRA_DIST_CONF): added conf/autofs/autofs_linux.h

2000-05-10  Ion Badulescu  <ib42@earth.cs.columbia.edu>

	* amd/ops_autofs.c (autofs_handle_fdset): call
	autofs_lookup_failed instead of autofs_mount_failed, if the name
	is not in the map
	(autofs_umount_{succeeded,failed}): pass the actual mount point,
	not its parent, as it's needed for clean-up; 

	* amd/autil.c (am_unmounted): notify autofs that the umount
	succeeded

	* amd/amfs_link.c (amfs_link_[u]mount): autofs link notification
	moved elsewhere

2000-05-09  Ion Badulescu  <ionut@moisil.cs.columbia.edu>

	* amd/amfs_auto.c (amfs_auto_bgmount): initialize opt_mount_type
	if necessary;
	(amfs_auto_mounted): test if opt_mount_type is NULL first
	(amfs_auto_mount): revert earlier change

	* amd/ops_autofs.c (autofs_mount_failed): remove autofs directory
	if mount failed

2000-05-09  Ion Badulescu  <ionut@moisil.cs.columbia.edu>

	* amd/ops_autofs.c (autofs_link_mount): use am_link as target

	* amd/map.c (unmount_mp): release file handle for autofs f/s about
	to be unmounted; this leak was preventing the unmount altogether
