@@ -38,7 +38,7 @@
  *
  *      %W% (Berkeley) %G%
  *
- * $Id: wire.c,v 1.8 2000/02/07 08:35:29 ezk Exp $
+ * $Id: wire.c,v 1.9 2000/05/28 01:11:02 ezk Exp $
  *
  */
 
@@ -169,7 +169,17 @@ getwire_lookup(u_long address, u_long netmask, int ishost)
     u_char addr[4];
 
     if (irs_gen == NULL)
+#ifdef irs_irp_acc
+      /*
+       * bsdi4 added another argument to this function, without changing
+       * its name.  The irs_irp_acc is the one (hacky) distinguishing
+       * feature found in <irs.h> that can differentiate between bsdi3 and
+       * bsdi4.
+       */
       irs_gen = irs_gen_acc("", NULL);
+#else /* not irs_irp_acc */
+      irs_gen = irs_gen_acc("");
+#endif /* not irs_irp_acc */
     if (irs_gen && irs_nw == NULL)
       irs_nw = (*irs_gen->nw_map)(irs_gen);
     net = ntohl(address) & (mask = ntohl(netmask));
